--- a/components/package.json
+++ b/components/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "animate.css": "^4.1.1",
     "react": "^17.0.1",
+    "react-canvas-wrapper": "^0.5.2",
     "react-dom": "^17.0.1",
     "react-draggable": "^4.4.3",
     "react-scripts": "4.0.1",
