--- a/components/package.json
+++ b/components/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "animate.css": "^4.1.1",
+    "boostrap": "^2.0.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-canvas-wrapper": "^0.5.2",
     "react-dom": "^17.0.1",
     "react-draggable": "^4.4.3",
