--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "react-select": "^4.0.2"
   }
 }
