--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "if-env": "^1.0.4",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-use-websocket": "^2.4.1"
   },
   "devDependencies": {
     "react-select": "^4.0.2"
